--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "End to end test runner",
     "main": "index.js",
     "scripts": {
-        "test": "node scripts/test.js"
+        "test": "node scripts/test.js",
+        "lint": "eslint commands data exampleTests plugins scripts"
     },
     "keywords": [
         "oat",
@@ -22,5 +23,8 @@
     "homepage": "https://github.com/oat-sa/browserslist-config-tao#readme",
     "devDependencies": {
         "cypress": "^3.2.0"
+    },
+    "peerDependencies": {
+      "eslint": "^5.16.0"
     }
 }
