remove external browserlist dependency

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     },
     "peerDependencies": {
         "eslint": "^5.16.0"
-    }
+    },
+    "browserslist": [
+      "last 2 chrome versions"
+    ]
 }
